-Attempt to fix overflow issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -374,7 +374,7 @@
   justify-content: center;
   // align-items: center;
   // border: 1px solid blue; 
-  height: 85vh;
+  height: 82vh;
   // overflow:
 }
 
